--- a/.github/workflows/get-home-latest-timeline.yml
+++ b/.github/workflows/get-home-latest-timeline.yml
@@ -2,7 +2,7 @@ name: Get Home Latest Timeline
 
 on:
   schedule:
-    - cron: '*/30 * * * *'  # 每30分钟运行
+    - cron: '0 */4 * * *'  # 每4小时运行
   workflow_dispatch:      # 允许手动触发
 
 jobs:
